# llm-casas-barrancabermeja-simulado

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/core/: exceptions.py
app/enums/: barrio.py
app/routers/: prediccion.py
app/schemas/: Casa.py  prediccion.py
app/services/: prediccion_services.py
llmcasasbca/: .gitignore
llmcasasbca/app/: main.py
llmcasasbca/app/enums/: barrio.py
llmcasasbca/app/routers/: prediccion.py
llmcasasbca/app/schemas/: Casa.py
llmcasasbca/app/services/: prediccion_services.py
